# onboarding-assistant

./: .gitignore  README.md  pyproject.toml  walkthrough.md
backend/: answerer.py  config.py  ingest.py  main.py  prompts.py  retriever.py  schemas.py
docs/: 00-README-engineering-onboarding.md  01-environments-and-access.md  02-it-helpdesk-faq.md  03-code-review-and-prs.md  04-payments-team-playbook.md  05-service-catalog-and-owners.md  06-org-changes-2026.md  07-deploys-releases-oncall.md  08-glossary-and-common-questions.md
eval/: evaluate.py  golden_set.json
frontend/: index.html
